--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,17 +60,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+ fonts:
+    - family: digital-7
+      fonts:
+        - asset: fonts/digital-7.ttf
+        - asset: fonts/digital-7(italic).ttf
+    - family: SpicyRice
+      fonts:
+        - asset: fonts/SpicyRice-Regular.ttf
+ 
