--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,12 +60,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
- fonts:
+  fonts:
     - family: digital-7
       fonts:
         - asset: fonts/digital-7.ttf
-        - asset: fonts/digital-7(italic).ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
     - family: SpicyRice
       fonts:
         - asset: fonts/SpicyRice-Regular.ttf
- 
+  #       - asset: fonts/TrajanPro_Bold.ttf
+  #         weight: 700
+  #
+  # For details regarding fonts from package dependencies,
+  # see https://flutter.dev/custom-fonts/#from-packages
