--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,10 +66,10 @@ flutter:
         - asset: fonts/digital-7.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-    - family: SpicyRice
+    - family: Satisfy
       fonts:
-        - asset: fonts/SpicyRice-Regular.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+        - asset: fonts/Satisfy-Regular.ttf
+        # - asset: fonts/Satisfy-Regular.ttf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
